--- a/components/plasmic/copy_of_supabase_auth/PlasmicAuthForm.module.css
+++ b/components/plasmic/copy_of_supabase_auth/PlasmicAuthForm.module.css
@@ -35,7 +35,7 @@
   min-width: 0;
   padding: 8px;
 }
-.formField__ymj5G:global(.__wab_instance) {
+.formField__oK1LR:global(.__wab_instance) {
   width: 100%;
   margin-bottom: 24px;
   min-width: 0;
@@ -44,7 +44,7 @@
   max-width: 100%;
   object-fit: cover;
 }
-.formField__urQr:global(.__wab_instance) {
+.formField__iqE4R:global(.__wab_instance) {
   width: 100%;
   margin-bottom: 24px;
   min-width: 0;
@@ -57,7 +57,7 @@
   max-width: 100%;
   object-fit: cover;
 }
-.text__z8Ehq {
+.text___84DJb {
   position: relative;
   width: 100%;
   height: auto;
