--- a/components/plasmic/copy_of_supabase_auth/PlasmicSsr.module.css
+++ b/components/plasmic/copy_of_supabase_auth/PlasmicSsr.module.css
@@ -116,7 +116,7 @@
   min-width: 0;
   padding: 8px;
 }
-.formField___6Ti39:global(.__wab_instance) {
+.formField__pQejw:global(.__wab_instance) {
   width: 100%;
   margin-bottom: 24px;
   min-width: 0;
@@ -125,12 +125,12 @@
   max-width: 100%;
   object-fit: cover;
 }
-.formField__o9OU:global(.__wab_instance) {
+.formField__zoZd:global(.__wab_instance) {
   width: 100%;
   margin-bottom: 24px;
   min-width: 0;
 }
-.text__h9R8P {
+.text__oitVc {
   position: relative;
   width: 100%;
   height: auto;
@@ -141,7 +141,7 @@
   max-width: 100%;
   object-fit: cover;
 }
-.text__hR8Uz {
+.text__uqfgc {
   position: relative;
   width: 100%;
   height: auto;
